# csv-guillotine

./: .gitignore  .travis.yml  Cargo.toml  README.md  buildspec.yml  run-tests
res/test/: expected.csv  sample.csv
src/: lib.rs  main.rs
